--- a/map.css
+++ b/map.css
@@ -4,8 +4,8 @@ html, body {
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;     /* Center vertically */
+    justify-content: center;
+    /* align-items: center; */
 }
     
 #map {
@@ -14,3 +14,72 @@ html, body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: subtle shadow for effect */
     border-radius: 8px; /* Optional: rounded corners */
 }
+
+#map svg {
+    /* background: yellow; */
+    /* opacity: 50%; */
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+#map svg circle {
+    pointer-events: auto;
+    fill-opacity: 60%;
+    stroke: white;
+    --color-departures: steelblue;
+    --color-arrivals: darkorange;
+    --color: color-mix(
+    in oklch,
+    var(--color-departures) calc(100% * var(--departure-ratio)),
+    var(--color-arrivals)
+);
+fill: var(--color);
+}
+
+header {
+    display: flex;
+    gap: 1em;
+    align-items: baseline;
+}
+  
+header label {
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+}
+  
+header label time,
+header label em {
+    margin-left: auto;
+    display: block;
+}
+  
+header label em {
+    color: #888;
+    font-style: italic;
+}
+
+.legend {
+    display: flex;
+    gap: 1px;
+    margin-block: 1em;
+  }
+  .legend > div {
+    flex: 1;
+    text-align: center;
+    padding: 0.5em;
+    color: white; /* 根据背景颜色调整 */
+    font-size: 0.9em;
+    /* 使用同样的颜色混合逻辑 */
+    --color-departures: steelblue;
+    --color-arrivals: darkorange;
+    --color: color-mix(in oklch,
+      var(--color-departures) calc(100% * var(--departure-ratio)),
+      var(--color-arrivals)
+    );
+    background: var(--color);
+  }
+
